<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yamba</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="update_status">Update status</string>
    <string name="status_title">Status</string>
    <string name="status_hint">enter your status update here</string>
    <string name="start_service">Start Service</string>
    <string name="stop_service">Stop Service</string>
    <string name="refresh_service">Refresh Service</string>
    <string name="username">Username</string>
    <string name="username_summary">Ender your login username</string>
    <string name="password">Password</string>
    <string name="password_summary">Enter your login password</string>
    <string name="server">Server</string>
    <string name="server_summary">Enter your server API</string>
    <string name="preferences">Preferences</string>
    <string name="updater_delay">Delay</string>
    <string name="delay_summary">How long should be the delay</string>

    <string-array name="delay_names">
        <item>Every 30 seconds</item>
        <item>Every fifteen minutes</item>
        <item>Every half hour</item>
        <item>Every hour</item>
        <item>Every half day</item>
        <item>Once a day</item>
        <item>Never</item>
    </string-array>
    <string-array name="delay_values">
        <item>30000</item>
        <item>900000</item>
        <item>180000</item>
        <item>3600000</item>
        <item>43200000</item>
        <item>86400000</item>
        <item>0</item>
    </string-array>

    <string name="timeline">Timeline</string>

    <string name="updating_status">Updating Status</string>

</resources>